# rsomics-bam-consensus

./: Cargo.toml  README.md
benches/: bam_consensus.rs  bench.rs
src/: call.rs  cli.rs  driver.rs  lib.rs  lookup.rs  output.rs  pileup.rs
tests/: compat.rs
tests/golden/: reads.bam  reads.bam.bai  ref.fa
