[package]
name = "rsomics-bam-consensus"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bam-consensus"
authors = ["Zane Leong <efd@live.com>"]
description = "FASTA/FASTQ/pileup consensus from a sorted BAM — Rust port of samtools consensus (simple mode)"

[[bin]]
name = "rsomics-bam-consensus"
path = "src/main.rs"


[lib]
name = "rsomics_bam_consensus"
path = "src/lib.rs"
doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-bamio = { version = "0.1" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "bam_consensus"
harness = false

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
